# codebuddy

./: README.md  pyproject.toml
config/: default.yaml
scripts/: run_demo.py
src/codebuddy/: __init__.py  config.py  main.py
src/codebuddy/agents/analyzer/: analyzer.py
src/codebuddy/agents/refactorer/: refactorer.py
src/codebuddy/agents/scanner/: scanner.py
src/codebuddy/agents/validator/: validator.py
src/codebuddy/core/: agent.py  context.py  models.py  pipeline.py
src/codebuddy/integrations/git/: repo.py
src/codebuddy/integrations/github/: client.py  webhook.py
src/codebuddy/llm/: client.py  templates.py
src/codebuddy/plugins/: base.py  registry.py
src/codebuddy/plugins/javascript/: plugin.py
src/codebuddy/plugins/python/: plugin.py
tests/: conftest.py
tests/unit/: test_models.py  test_pipeline.py
